project/router/target/rls/debug/build/anyhow-10216024329ec59b/stderr
error[E0554]: `#![feature]` may not be used on the stable release channel
 --> /home/sl/Works/github/data-structure/project/router/target/rls/debug/build/anyhow-10216024329ec59b/out/probe.rs:2:5
  |
2 |     #![feature(backtrace)]
  |     ^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0554`.
